# study-spider

./: .gitignore  README.md  pyproject.toml
src/: setting.py
src/25-10-15-各种加密逻辑/: README.md  index.html  sha512_demo.py  url_encoding.py  use_base64.py  use_hex.py  use_md5.py  use_sha1.py
src/25-10-17-wyy/: main.py  use_requests.py
src/25-10-17-wyy/new_wyy/: first.html  first.js
src/25-10-17-wyy/wyy/: main.py  out.json  setting.py  spider.py  wyy_setting.py
src/course/25-11-08/: __init__.py
src/day14-ast/code/: 01-认识ast语法.js  02-path属性.js  03-替换节点.js  04-替换数组.js  夏洛极验ast还原.js
src/day14-ast/study/: .gitignore  package.json  pnpm-lock.yaml
src/day14-ast/课件/: 12-AST节点树专题.md
src/mashangpa/: send.py  setting.py
src/mashangpa/第11题/: main.py
src/mashangpa/第1题/: main.py
src/mashangpa/第2题/: main.py
src/mashangpa/第3题/: main.py
src/mashangpa/第4题/: main.py
src/mashangpa/第5题/: main.py
src/mashangpa/第6题/: main.py
src/other/gdtv/: a.js  chunk-libs_1757645135263_e0e1da0d.js  download.wasm  gdtv.js  index.html  index.js  vendor_w_e0e1da0d.js
src/other/xueqiu/: index.html  main.py  test.py
src/spa/spa14/: index.html  index.js  main.py
src/spiderDemo/: a.html  ob_challenge1.js  test.py  two.py
src/spiderDemo/T15/: cap5_challenge.js  index.html  main.py
src/spiderDemo/T21/: hash_challenge.js  index.html  main.py
src/spiderDemo/T8/: __init__.py  a.py  dp.py  dps.py  font_anti.js  index.html  main.py  test.py
src/spiderDemo/T9/: font_sprites.js  index.html  main.py
src/spiderDemo/five/: a.html  a.js  index.html  index.js  proxy.py
src/spiderDemo/four/: a.html  spider.py  wasm_anti.js
src/spiderDemo/one/: one.py  test.py
src/spiderDemo/t22/: cors.py
src/study_spider/: __init__.py
src/tests/: a.js  crate_version.json  crate_version.py  use_execjs.py
src/utils/: node.py  old_rsa.js
test/25-10-12/: first.js  md5.js
test/airspider/: README.md  air.db  first_spider.py  items.py  pipelines.py  setting.py
test/eventspider/: main.py  my_download.py  setting.py
test/mysqlspider/: README.md  mysql_spider.py  setting.py  tax_item.py
(+65 files in other folders)
